--- a/stm32/ros_usbnode/platformio.ini
+++ b/stm32/ros_usbnode/platformio.ini
@@ -11,11 +11,12 @@
 [env:Yardforce500]
 platform = ststm32
 platform_packages = 
-    toolchain-gccarmnoneeabi@~1.90301.0
+	toolchain-gccarmnoneeabi@~1.90301.0
 	platformio/tool-stm32duino@^1.0.1
 	platformio/tool-openocd@^2.1100.211028
 	platformio/tool-dfuutil@^1.11.0
-board = genericSTM32F103VC
+	platformio/framework-stm32cubef4@^1.26.2
+board = genericSTM32F401CC
 framework = stm32cube
 build_flags = -Wl,--undefined,_printf_float  -O2 -Isrc/ros/ros_lib -Isrc/ros/ros_custom
 build_src_filter = 
@@ -28,7 +29,7 @@ monitor_port = /dev/ttyAMA0
 
 [env:Yardforce 500 REMOTE UPLOAD (STM32F103 VCT6)]
 platform = ststm32
-board = genericSTM32F103VC
+board = genericSTM32F401CC
 framework = stm32cube
 build_flags = -DBOARD_YARDFORCE500 -Wl,--undefined,_printf_float -Isrc/ros/ros_lib -Isrc/ros/ros_custom
 extra_scripts = raspi_remote_upload.py
