--- a/stm32/ros_usbnode/platformio.ini
+++ b/stm32/ros_usbnode/platformio.ini
@@ -15,7 +15,9 @@ platform_packages =
 	platformio/tool-stm32duino@^1.0.1
 	platformio/tool-openocd@^2.1100.211028
 	platformio/tool-dfuutil@^1.11.0
-board = genericSTM32F103VC
+	#platformio/framework-stm32cubef4@^1.26.2
+	
+board = genericSTM32F401CC
 framework = stm32cube
 build_flags = -Wl,--undefined,_printf_float  -O2 -Isrc/ros/ros_lib -Isrc/ros/ros_custom
 build_src_filter = 
@@ -26,9 +28,9 @@ debug_tool = stlink
 monitor_speed = 115200
 monitor_port = /dev/ttyAMA0
 
-[env:Yardforce 500 REMOTE UPLOAD (STM32F103 VCT6)]
+[env:Yardforce 500 REMOTE UPLOAD (STM32F401 VCT6)]
 platform = ststm32
-board = genericSTM32F103VC
+board = genericSTM32F401CC
 framework = stm32cube
 build_flags = -DBOARD_YARDFORCE500 -Wl,--undefined,_printf_float -Isrc/ros/ros_lib -Isrc/ros/ros_custom
 extra_scripts = raspi_remote_upload.py
