--- a/stm32/ros_usbnode/platformio.ini
+++ b/stm32/ros_usbnode/platformio.ini
@@ -15,7 +15,7 @@ platform_packages =
 	platformio/tool-stm32duino@^1.0.1
 	platformio/tool-openocd@^2.1100.211028
 	platformio/tool-dfuutil@^1.11.0
-	#platformio/framework-stm32cubef4@^1.26.2
+	platformio/framework-stm32cubef4@^1.26.2
 	
 board = genericSTM32F401CC
 framework = stm32cube
